LSSVMSparkModel working. Tuning of Kernel, subset selection [WIP]